<resources>
    <string name="app_name">Estacionamiento</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_email">Este usuario es invalido</string>
    <string name="error_invalid_password">La clave es muy corta</string>
    <string name="error_incorrect_password">La clave es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>
